--- a/core/perfil/templates/home.html
+++ b/core/perfil/templates/home.html
@@ -50,24 +50,24 @@
                     <div class="saldo">
                         <span class="fonte-destaque">Saldo total</span>
                         <br>
-                        <span class="font-light">R$ 1.200,00</span>
+                        <span class="font-light">R$ {{saldo_total}}</span>
                     </div>
                     <hr class="hr-borda">
                     <span class="fonte-destaque">Suas contas</span>
 
                     <div class="div-contas">
-                        
+                        {% for conta in contas %}
                             <div class="lista-conta">
-                                <span>Nubank</span>
-                                <span class="total-conta">R$ 3.000,00</span>
+                                <span>{{conta.apelido}}</span>
+                                <span class="total-conta">R$ {{conta.valor}}</span>
                             </div>
                             <br>
-                        
+                        {% endfor %}
                         
                         
                     </div>
                     <hr class="hr-borda">
-                    <a href="#" class="botao-principal">Gerenciar contas</a>
+                    <a href="{% url 'gerenciar' %}" class="botao-principal">Gerenciar contas</a>
                 </div>
                 
             </div>
